--- a/cmake/mpc++Config.cmake.in
+++ b/cmake/mpc++Config.cmake.in
@@ -1,5 +1,11 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+
+find_dependency(Eigen3 REQUIRED NO_MODULE)
+find_dependency(osqp REQUIRED)
+find_dependency(NLopt REQUIRED)
+
 include("${CMAKE_CURRENT_LIST_DIR}/mpc++Targets.cmake")
 check_required_components("@PROJECT_NAME@")
 
